--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ torch==2.2.2
 Pillow==10.2.0
 segmentation-models-pytorch==0.3.3
 numpy==1.24.3
-scikit-learn==1.4.1.post1
+scikit-learn==1.3.2
 joblib==1.3.2
 torchvision==0.17.2
 opencv-python==4.9.0.80
